Fixed un-intended z-index issue on stage1.

--- a/src/join/page.css
+++ b/src/join/page.css
@@ -2,8 +2,6 @@
     position: absolute;
     width: 100vw;
     height: 100%;
-    z-index: 1;
-    background-color: #2B0906;
 }
 
 .corner-elements {
